 - version bump in README.md
 - version bump in CHANGELOG
 - update OEIS stats for release version
 - git tag -a v0.x.x -m "v0.x.x - summary"
 - git push
 - git push --tags
 - mix hex.publish

# CHANGELOG

## v0.*.*

### Build/Development changes

 - Module requiring HTTPoison and Jason excluded from packaging
 - HTTPoison and Jason moved to `dev` and `test` only requirements
 
 

## v0.11.1

### Enhancements

 - Chunky.Math
  - `analyze_number/2` - Run all predicates against `n` to generate labels for `n`
  - `is_odd?/1` - New predicate
  - `is_even?/1` - New predicate
  - `is_zero?/1` - New predicate
  - `is_positive?/1` - New predicate
  - `is_negative?/1` - New predicate
  - all predicates of form `is_*?/1` now work for all integers in range `(-∞..+∞)


## v0.11.0

```
OEIS Coverage
        210 total sequences
By Module
        Elixir.Chunky.Sequence.OEIS - 3 sequences
        Elixir.Chunky.Sequence.OEIS.Core - 88 sequences
        Elixir.Chunky.Sequence.OEIS.Factors - 98 sequences
        Elixir.Chunky.Sequence.OEIS.Primes - 1 sequences
        Elixir.Chunky.Sequence.OEIS.Sigma - 20 sequences
Sequence Groups
        OEIS Core Sequences - 89 / 177 (50.28%)
        OEIS Core::Easy Sequences - 75 / 146 (51.37%)
        OEIS Core::Hard Sequences - 12 / 12 (100.0%)
        OEIS Core::Multiplicative Sequences - 22 / 22 (100.0%)
        OEIS Core::Eigen Sequences - 5 / 5 (100.0%)
```

### Enhancements

 - added Chunky.CacheAgent - caching agent for particularly recursive functions
 - Chunky.Math
  - ramanujan_tau/1 - Find the ramanujan tau error value for `n`
  - partition_count/1 - Recursive (and cached) Partition Function for `n`
  - abelian_group_count/1 - Number of Abelian groups of order `n`
  - p_adic_valuation/2 - The _p-adic_ valuation function (for prime `p` and integer `n`)
  - rooted_tree_count/1 - Rooted trees of N nodes
  - is_of_form_mx_plus_b/3 - Does number have form `mx + b` for strict values of `m` and `b`?