@@ -9,13 +9,12 @@ defmodule Chunky.Sequence.OEIS do
 
    - `Chunky.Sequence.OEIS.Core` - OEIS `core` Keyword sequences
    - `Chunky.Sequence.OEIS.Sigma` - Sequenecs related to the Sigma (𝝈) function
+   - `Chunky.Sequence.OEIS.Primes` - Primes and related sequences
+   - `Chunky.Sequence.OEIS.Factors` - Factorizations and divisors
 
-  ## Available Sequences
-
-   - [A000045 - Fibonacci Numbers](https://oeis.org/A000045) - `:a000045` or `:fibonacci`
 
   """
-  import Chunky.Sequence, only: [sequence_for_function: 1, sequence_for_list: 1]
+  import Chunky.Sequence, only: [sequence_for_list: 1]
   alias Chunky.Sequence
 
   @data_keyword_core_hard [
@@ -540,41 +539,4 @@ defmodule Chunky.Sequence.OEIS do
     |> length() > 0
   end
 
-  @doc """
-  OEIS Sequence `A000045` - Fibonacci numbers
-
-  From [OEIS A000045](https://oeis.org/A000045)
-
-  > Fibonacci numbers: F(n) = F(n-1) + F(n-2) with F(0) = 0 and F(1) = 1. 
-  > (Formerly M0692 N0256)
-
-  **Sequence IDs**: `:a000045`, `:fibonacci`
-
-  **Finite**: false
-
-  ## Example
-      
-      iex> Sequence.create(Sequence.OEIS, :a000045) |> Sequence.take!(10)
-      [0, 1, 1, 2, 3, 5, 8, 13, 21, 34]
-
-  """
-  @doc sequence: "OEIS A000045 - Fibonacci Numbers [0, 1, 1, 2, 3, 5, ...]",
-       references: [{:oeis, :a000045, "https://oeis.org/A000045"}]
-  def create_sequence_a000045(_opts) do
-    sequence_for_function(&seq_a000045/3)
-  end
-
-  @doc sequence: "OEIS A000045 - Fibonacci Numbers [0, 1, 1, 2, 3, 5, ...]",
-       references: [{:oeis, :a000045, "https://oeis.org/A000045"}]
-  def create_sequence_fibonacci(_opts) do
-    sequence_for_function(&seq_a000045/3)
-  end
-
-  def seq_a000045(idx, a, b) do
-    case idx do
-      0 -> 0
-      1 -> 1
-      _ -> a + b
-    end
-  end
 end
