@@ -18,6 +18,7 @@ defmodule Chunky.Sequence.OEIS.Core do
    - [A000040 - The prime numbers.](https://oeis.org/A000040) - `:a000040` - `create_sequence_a000040/1`
    - [A000041 - Partition Numbers](https://oeis.org/A000041) - `:a000041` - `create_sequence_a000041/1`
    - [A000043 - Mersenne exponents: primes p such that 2^p - 1 is prime.](https://oeis.org/A000043) - `:a000043` - `create_sequence_a000043/1`
+   - [A000045 - Fibonacci Numbers](https://oeis.org/A000045) - `:a000045` or `:fibonacci` - `create_sequence_a000045/1`
    - [A000069 - Odious numbers: numbers with an odd number of 1's in their binary expansion](https://oeis.org/A000069) - `:a000069` - `create_sequence_a000069/1`
    - [A000079 - Powers of 2](https://oeis.org/A000079) - `:a000079` - `create_sequence_a000079/1`
    - [A000081 - Number of unlabeled rooted trees with n nodes](https://oeis.org/A000081) - `:a000081` - `create_sequence_a000081/1`
@@ -987,6 +988,44 @@ defmodule Chunky.Sequence.OEIS.Core do
        references: [{:oeis, :a000043, "https://oeis.org/A000043"}]
   def create_sequence_a000043(_opts) do
     sequence_for_list(@data_a000043)
+  end
+  
+  @doc """
+  OEIS Sequence `A000045` - Fibonacci numbers
+
+  From [OEIS A000045](https://oeis.org/A000045)
+
+  > Fibonacci numbers: F(n) = F(n-1) + F(n-2) with F(0) = 0 and F(1) = 1. 
+  > (Formerly M0692 N0256)
+
+  **Sequence IDs**: `:a000045`, `:fibonacci`
+
+  **Finite**: false
+
+  ## Example
+      
+      iex> Sequence.create(Sequence.OEIS.Core, :a000045) |> Sequence.take!(10)
+      [0, 1, 1, 2, 3, 5, 8, 13, 21, 34]
+
+  """
+  @doc sequence: "OEIS A000045 - Fibonacci Numbers [0, 1, 1, 2, 3, 5, ...]",
+       references: [{:oeis, :a000045, "https://oeis.org/A000045"}]
+  def create_sequence_a000045(_opts) do
+    sequence_for_function(&Chunky.Sequence.OEIS.Core.seq_a000045/3)
+  end
+
+  @doc sequence: "OEIS A000045 - Fibonacci Numbers [0, 1, 1, 2, 3, 5, ...]",
+       references: [{:oeis, :a000045, "https://oeis.org/A000045"}]
+  def create_sequence_fibonacci(_opts) do
+    sequence_for_function(&Chunky.Sequence.OEIS.Core.seq_a000045/3)
+  end
+
+  def seq_a000045(idx, a, b) do
+    case idx do
+      0 -> 0
+      1 -> 1
+      _ -> a + b
+    end
   end
 
   @doc """
